--- a/app/build.gradle
+++ b/app/build.gradle
@@ -87,6 +87,12 @@ dependencies {
     implementation('io.reactivex.rxjava2:rxandroid:2.1.1')
     implementation('io.reactivex.rxjava2:rxjava:2.2.9')
     implementation 'com.google.code.gson:gson:2.8.5'
+    implementation 'com.squareup.okhttp3:okhttp:4.8.1'
+    implementation "com.tbruyelle.rxpermissions2:rxpermissions:0.8.1"
+
+
+
+
 
 
     //testing
